More dark mode fixes

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -218,6 +218,10 @@ p.post-meta {font-size: 80%; color: #777;}
     z-index: -1;
     width:223px;
     border-left: 1px solid #dedede;
+	color: #ec0000;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 3px;
 }
 
 
@@ -226,7 +230,7 @@ ul#results-container a {
 }
 
 ul#results-container a:hover {
-    color: black;
+    color: #c10101;
 }
 
 
@@ -242,6 +246,7 @@ ul#results-container a:hover {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin-top:10px;
+	color: #c10101;
 }
 /* end search */
 
