--- a/css/theme-blue.css
+++ b/css/theme-blue.css
@@ -81,7 +81,7 @@ a.navbar-brand:hover {
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #347DBE;
+    background-color: #c10101;
 }
 
 .btn-primary:hover,
